# GLRender

./: CMakeLists.txt  README.md  output3_2.yuv
include/: glRender.h  glShader.h  glVDK.h
shader_c/: fragShader.c  vertexShader.c
src/: glRender.cpp  glVDK.cpp  main.cpp
